--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Museum Wiki</title>
-  <base href="/">
+  <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.832740494a448f7916a6.css"></head>
@@ -15,5 +15,5 @@
     </h2>
   </div>
 </app-root>
-<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1d7297cd02dedccf7009.js" nomodule defer></script><script src="polyfills-es2015.3069a18869d2c2328777.js" type="module"></script><script src="scripts.18d6bfea3bc57d8b3c7c.js" defer></script><script src="main-es2015.739e286ae4b3fe167fe8.js" type="module"></script><script src="main-es5.739e286ae4b3fe167fe8.js" nomodule defer></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1d7297cd02dedccf7009.js" nomodule defer></script><script src="polyfills-es2015.3069a18869d2c2328777.js" type="module"></script><script src="scripts.18d6bfea3bc57d8b3c7c.js" defer></script><script src="main-es2015.147c011b2fc385bce48c.js" type="module"></script><script src="main-es5.147c011b2fc385bce48c.js" nomodule defer></script></body>
 </html>
