--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,10 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.51e1d682ac3c5df2ee48.css"></head>
-<body>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link rel="stylesheet" href="styles.32a2371617ddd6a7a854.css"></head>
+<body class="mat-typography">
 <app-root>
   <div style="height: 200px; width: 100%; margin-top: 30px;">
     <h2 style="text-align: center">
@@ -15,5 +17,5 @@
     </h2>
   </div>
 </app-root>
-<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1d7297cd02dedccf7009.js" nomodule defer></script><script src="polyfills-es2015.3069a18869d2c2328777.js" type="module"></script><script src="scripts.18d6bfea3bc57d8b3c7c.js" defer></script><script src="main-es2015.5471228531bffc1222a0.js" type="module"></script><script src="main-es5.5471228531bffc1222a0.js" nomodule defer></script></body>
+<script src="runtime-es2015.0811dcefd377500b5b1a.js" type="module"></script><script src="runtime-es5.0811dcefd377500b5b1a.js" nomodule defer></script><script src="polyfills-es5.1d7297cd02dedccf7009.js" nomodule defer></script><script src="polyfills-es2015.3069a18869d2c2328777.js" type="module"></script><script src="scripts.18d6bfea3bc57d8b3c7c.js" defer></script><script src="main-es2015.c25744efa4ad836549c3.js" type="module"></script><script src="main-es5.c25744efa4ad836549c3.js" nomodule defer></script></body>
 </html>
